--- a/src/components/header.css
+++ b/src/components/header.css
@@ -2,7 +2,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 20px;
+  padding: 20px ;
   width: 100%;
 }
 
@@ -50,6 +50,7 @@
 
 .Hero-image {
   width: 380px;
+  height: auto;
 }
 
 .text-content {
@@ -62,9 +63,11 @@
 
 .Clients {
   display: flex;
-  justify-content: space-around;
+  justify-content: flex-start;
+  gap: 50px;
   width: 50%;
   margin-top: 20px;
+  margin-left: 100px;
 }
 
 .Clients img {
@@ -79,13 +82,17 @@
 .register-btn {
   border-radius: 60px;
   background-color: whitesmoke;
-  white-space: nowrap;
+  white-space: normal;
   border: none;
   padding: 10px 20px;
   cursor: pointer;
+  max-width: 100px;
+  margin-right: 50px;
 }
 
 .learn-more-btn {
+  float: left;
+  margin-top: 20px;
   background-color: black;
   color: white;
   border: none;
@@ -102,7 +109,7 @@
 .top-right {
   display: flex;
   align-items: center;
-  gap: 20px;
+  gap: 10px;
 }
 
 p{
@@ -111,6 +118,9 @@ p{
 }
 
 h1{
-  
   text-align: left
+}
+
+.sub-menu{
+padding: auto;
 }
