--- a/src/components/header.css
+++ b/src/components/header.css
@@ -65,8 +65,8 @@
   display: flex;
   justify-content: flex-start;
   gap: 50px;
-  height:30px;
-  width: 950px;
+  height:auto;
+  width: auto;
   margin-top: 30px;
   margin-left: 50px;
 }
